tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/InterviewTemplateDocument__c.object-meta.xml
<CustomObject>
    <description>HTML template documents with JSON manifests for interview template rendering. Supports drag-drop builder, Jinja templating, and PDF generation via DocGen.</description>
    <label>Interview Template Document</label>
    <nameField>
        <displayFormat>ITDOC-{000000}</displayFormat>
        <label>Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Template Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>