tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Assets_Zip_ContentVersionId__c.field-meta.xml
<CustomField>
    <fullName>Assets_Zip_ContentVersionId__c</fullName>
    <label>Assets ZIP Content Version</label>
    <length>18</length>
    <type>Text</type>
</CustomField>