tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Builder_Manifest__c.field-meta.xml
<CustomField>
    <fullName>Builder_Manifest__c</fullName>
    <label>Builder Manifest (JSON)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>