tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Contains_PHI__c.field-meta.xml
<CustomField>
    <fullName>Contains_PHI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains PHI</label>
    <type>Checkbox</type>
</CustomField>