tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Content_Hash__c.field-meta.xml
<CustomField>
    <fullName>Content_Hash__c</fullName>
    <label>Content Hash (SHA256)</label>
    <length>64</length>
    <type>Text</type>
</CustomField>