tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Content_Link__c.field-meta.xml
<CustomField>
    <fullName>Content_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content Link</label>
    <referenceTo>ContentLink</referenceTo>
    <relationshipName>InterviewTemplateDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>