tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Css_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Css_Bundle__c</fullName>
    <label>CSS Bundle</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>