tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Data_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Data_Mapping__c</fullName>
    <label>Data Mapping (JSON)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>