tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Engine_Version__c.field-meta.xml
<CustomField>
    <fullName>Engine_Version__c</fullName>
    <label>Engine Version</label>
    <length>64</length>
    <type>Text</type>
</CustomField>