tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <label>File Name</label>
    <type>TextArea</type>
</CustomField>