tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/File_Naming_Pattern__c.field-meta.xml
<CustomField>
    <fullName>File_Naming_Pattern__c</fullName>
    <inlineHelpText>{{ClientLast}} - {{TemplateName}}/{{TemplateVersion}} - {{date}}</inlineHelpText>
    <label>File Naming Pattern</label>
    <type>TextArea</type>
</CustomField>