tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Html_Template__c.field-meta.xml
<CustomField>
    <fullName>Html_Template__c</fullName>
    <label>HTML Template</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>