tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/InterviewTemplate__c.field-meta.xml
<CustomField>
    <fullName>InterviewTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interview Template</label>
    <referenceTo>InterviewTemplate__c</referenceTo>
    <relationshipLabel>Template Documents</relationshipLabel>
    <relationshipName>TemplateDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>