tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Last_Validated__c.field-meta.xml
<CustomField>
    <fullName>Last_Validated__c</fullName>
    <label>Last Validated</label>
    <type>DateTime</type>
</CustomField>