tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>DOCX</fullName>
            </value>
            <value>
                <fullName>Password Protected DOCX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>