tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Page_Margins__c.field-meta.xml
<CustomField>
    <fullName>Page_Margins__c</fullName>
    <defaultValue>&quot;0.5in&quot;</defaultValue>
    <label>Page Margins</label>
    <length>20</length>
    <type>Text</type>
</CustomField>