tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <defaultValue>&quot;Letter&quot;</defaultValue>
    <label>Page Size</label>
    <length>20</length>
    <type>Text</type>
</CustomField>