tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Primary_Object__c</fullName>
    <label>Primary  Object</label>
    <type>TextArea</type>
</CustomField>