tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program</referenceTo>
    <relationshipName>InterviewTemplateDocuments</relationshipName>
    <type>Lookup</type>
</CustomField>