tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Retention_Policy__c.field-meta.xml
<CustomField>
    <fullName>Retention_Policy__c</fullName>
    <label>Retention Policy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>7 Year</fullName>
            </value>
            <value>
                <fullName>Legal Hold</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>