tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/SOQL_or_Query__c.field-meta.xml
<CustomField>
    <fullName>SOQL_or_Query__c</fullName>
    <label>SOQL/Query Context</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>