tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Template_Format__c.field-meta.xml
<CustomField>
    <fullName>Template_Format__c</fullName>
    <label>Template Format</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HTML_JINJA</fullName>
                <default>true</default>
                <label>HTML + Jinja</label>
            </value>
            <value>
                <fullName>DOCX</fullName>
                <label>Word Document (Legacy)</label>
            </value>
            <value>
                <fullName>GDOCS</fullName>
                <label>Google Docs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>