tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <defaultValue>&quot;tgthr-default&quot;</defaultValue>
    <label>Theme</label>
    <length>50</length>
    <type>Text</type>
</CustomField>