tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Validation_Report__c.field-meta.xml
<CustomField>
    <fullName>Validation_Report__c</fullName>
    <label>Validation Report (JSON)</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>