tgthrProgramManagement/force-app/main/default/objects/InterviewTemplateDocument__c/fields/Value_Sets__c.field-meta.xml
<CustomField>
    <fullName>Value_Sets__c</fullName>
    <description>JSON for option labels, enums, translations</description>
    <label>Value Sets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>